[tool.poetry]
name = "flask-youtube-embed"
version = "0.1.0"
description = ""
authors = ["Dosenpfand <m@sad.bz>"]
readme = "README.md"
packages = [{include = "flask_youtube_embed"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
